08-RBAC/log-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-pod
spec:
  serviceAccountName: ckad
  containers:
    - name: log-reader
      image: alpine
      command: ["sh", "-c", "apk add --no-cache kubectl && sleep infinity"]
  restartPolicy: Never
